hphp/hack/test/typecheck/reactive/test_global_class2.php.exp
File "test_global_class2.php", line 5, characters 10-11:
This is global; you cannot access or write to globals in a reactive context (NastCheck[3049])
